--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -3,14 +3,38 @@
 </head>
 
 <body>
-  <h1>Welcome to the Meteor Learning project</h1>
 
-  {{> hello}}
-  {{> info}}
+<nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="container">
+      <h1>Welcome to the Meteor Learning project</h1>
+      {{> hello}}
+      {{> info}}
+    </div><!-- /.container -->
+
 </body>
 
 <template name="hello">
-  <button>Click Me</button>
+  <button class="btn btn-default">Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
 
